--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   firebase_storage: ^11.2.6
   google_sign_in: ^6.1.5
   fluttertoast: ^8.2.2
+  flutter_paypal_checkout: ^1.0.1
+  flutter_paypal_payment: ^1.0.6
+  flutter_inappwebview: ^5.8.0
+  dio: ^5.3.4
 
 dev_dependencies:
   flutter_test:
