--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_paypal_payment: ^1.0.6
   flutter_inappwebview: ^5.8.0
   dio: ^5.3.4
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
